<resources>
    <string name="app_name">ShoppingList</string>
    <string name="inter_ad_id">ca-app-pub-3940256099942544/1033173712</string>
    <string name="settings">Settings</string>
    <string name="notes">Notes</string>
    <string name="shop_list">Shop list</string>
    <string name="new_item">New</string>

    <string name="note_title_hint">Title</string>
    <string name="description_hint">Description</string>
    <string name="note_fragment">note fragment</string>

    <string name="new_list">New list name</string>
    <string name="list_name">Enter list name</string>

    <string name="create_list">Create list</string>

    <string name="delete_alert">Delete</string>
    <string name="delete_item">Do you want to delete this item?</string>

    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>

    <string name="update">Update</string>
    <string name="update_list">Updating list</string>
    <string name="general">General</string>
    <string name="chose_note_style">Chose note style</string>
    <string name="chose_time_format">Chose time format</string>
    <string name="remove_ads">Remove ads</string>
    <string name="remove_ads_summary">Remove all ads from this app</string>

    <string name="theme_settings">Theme settings</string>
    <string name="chose_theme">Chose theme</string>
    <string name="toxic_theme">Toxic</string>
    <string name="contrast_theme">contrast</string>
    <string name="risk_theme">risk</string>

    <string name="note_text_settings">Note text settings</string>
    <string name="chose_text_size">Chose text size</string>
    <string name="title_text_size">Title text size</string>
    <string name="content_text_size">Content text size</string>

    <string name="fail_to_load_inter_ad">Fail to load inter ad</string>
    <string name="remove_ads_button_is_pressed">Remove ads button is pressed</string>
    <string name="thank_you_for_your_money">Thank you for your money</string>
    <string name="purchase_is_failed">Purchase is failed</string>
    <string name="empty_list">Empty list</string>
    <string name="new_item_hint">New item</string>
    <string name="update_list_item">Update list item</string>
    <string name="name">name</string>
    <string name="item_info">item info</string>
    <string name="update_item">Update item</string>
    <string name="shop_list_fragment">Shop list fragment</string>
    <string name="list_title_is_empty">List title is empty</string>
    <string name="no_description">No description</string>
    <string name="_0_0">0/0</string>
    <string name="textview">TextView</string>


</resources>