<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory android:title="@string/general">

        <ListPreference
            android:defaultValue="1"
            android:entries="@array/chose_time_format_array"
            android:entryValues="@array/chose_time_format_values"
            app:useSimpleSummaryProvider="true"
            android:icon="@drawable/ic_time_format"
            android:key="time_format_key"
            android:title="@string/chose_time_format" />
        <ListPreference
            android:defaultValue="1"
            android:entries="@array/chose_note_style_array"
            app:useSimpleSummaryProvider="true"
            android:entryValues="@array/chose_note_style_values"
            android:icon="@drawable/ic_note_style"
            android:key="note_style_key"
            android:title="@string/chose_note_style" />
        <Preference
            android:icon="@drawable/ic_ads_off"
            android:summary="@string/remove_ads_summary"
            android:title="@string/remove_ads" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/theme_settings">

        <ListPreference
            android:defaultValue="1"
            android:entries="@array/chose_theme_array"
            app:useSimpleSummaryProvider="true"
            android:entryValues="@array/chose_theme_values"
            android:icon="@drawable/ic_theme_style"
            android:key="theme_key"
            android:title="@string/chose_theme" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/note_text_settings">

        <ListPreference
            android:defaultValue="1"
            app:useSimpleSummaryProvider="true"
            android:entries="@array/text_size_array"
            android:entryValues="@array/text_size_values"
            android:icon="@drawable/ic_text_size"
            android:key="title_text_size_key"
            android:title="@string/title_text_size" />
        <ListPreference
            android:defaultValue="1"
            android:entries="@array/text_size_array"
            app:useSimpleSummaryProvider="true"
            android:entryValues="@array/text_size_values"
            android:icon="@drawable/ic_text_size"
            android:key="context_text_size_key"
            android:title="@string/content_text_size" />
    </PreferenceCategory>
</PreferenceScreen>