<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/margin_half">


    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="@dimen/radius_double"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintListCard"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/padding_mini">

            <TextView
                android:id="@+id/tv_list_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_mini"
                android:padding="@dimen/padding_half"
                android:text="@string/list_title_is_empty"
                android:textColor="@color/mr_text_color_black"
                android:textSize="@dimen/list_title_text_size"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvListCreatingTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_mini"
                android:padding="@dimen/padding_half"
                android:text="@string/no_description"
                android:textSize="@dimen/date_indication_text_size"
                app:layout_constraintEnd_toEndOf="@+id/tv_list_name"
                app:layout_constraintStart_toStartOf="@+id/tv_list_name"
                app:layout_constraintTop_toBottomOf="@+id/tv_list_name" />

            <ProgressBar
                android:id="@+id/progressBar"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin"
                android:layout_marginStart="@dimen/margin_double"
                app:layout_constraintBottom_toBottomOf="@+id/tvProgressCounter"
                app:layout_constraintEnd_toStartOf="@+id/tvProgressCounter"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/tvProgressCounter" />

            <ImageButton
                android:id="@+id/btnDeleteList"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin"
                android:backgroundTint="@color/picker_red"
                android:minHeight="@dimen/min_height"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvListCreatingTime"
                app:srcCompat="@drawable/ic_delete_list" />

            <ImageButton
                android:id="@+id/btnEditList"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/picker_green"
                android:minHeight="@dimen/min_height"
                app:layout_constraintBottom_toBottomOf="@+id/btnDeleteList"
                app:layout_constraintEnd_toStartOf="@+id/btnDeleteList"
                app:layout_constraintTop_toTopOf="@+id/btnDeleteList"
                app:srcCompat="@drawable/ic_edit_list" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvProgressCounter"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_margin="@dimen/margin_half"
                android:gravity="center"
                android:padding="@dimen/padding_half"
                android:text="@string/_0_0"
                android:textColor="@color/black"
                android:textSize="@dimen/progress_counter_text_size"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/btnEditList"
                app:layout_constraintEnd_toStartOf="@+id/btnEditList"
                app:layout_constraintTop_toTopOf="@+id/btnEditList" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>